package net.thesphynx.espritmarket.Partnership.Entity;

public enum InterviewStatus {
    SCHEDULED,
    COMPLETED,
    CANCELLED
}